TGC-1368: Combined endpoint
